--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,4 @@
+
 # Greetings
 
 Welcome to the living open source textbook ***Correcting Effect Sizes for Statistical Artifacts***. This textbook covers all the essential equations and code needed to correct for biases in our effect size estimates. It will also hopefully provide readers with a deeper understanding, appreciation, and intuition for these seemingly complex formulas. It also covers how to apply these corrections to meta-analysis.
@@ -6,17 +7,19 @@ Welcome to the living open source textbook ***Correcting Effect Sizes for Statis
 
 In this book statistical artifacts will be defined broadly as **any source of contamination that induces bias in research findings**. Artifacts are present in virtually every research study, so it is crucial that we address them.
 
-#### Living and Open Source {.unnumbered}
+#### Living Textbook {.unnumbered}
 
-A living textbook is one that constantly updates with new features and is open to changes from others. This book will contain modern methods and cutting-edge techniques for artifact corrections, so in order to keep this book up-to-date it needs to grow as the research grows. The current maintainer of the site is [Matthew B. Jané](https://matthewbjane.com). 
+A living textbook is one that constantly updates with new features and is open to changes from others. This book will contain modern methods and cutting-edge techniques for artifact corrections, so in order to keep this book up-to-date it needs to grow as the research grows. New features, such as interactive figures will be added soon
 
-It is important that this book is both open-source and open-access. is also open source ([CC-BY license](LICENSE)). All the figures, code, and documents are available in my [github repository](https://github.com/MatthewBJane/artifact-corrections-for-effect-sizes/tree/gh-pages).
+#### Open Science Practices {.unnumbered}
+
+The current maintainer of the site is [Matthew B. Jané](https://matthewbjane.com).
+
+It is important that this book is both open-source and open-access. is also open source ([CC-BY license](LICENSE)). All the figures, code, and documents are available in my [github repository](https://github.com/MatthewBJane/artifact-corrections-for-effect-sizes/).
 
 #### Contributions {.unnumbered}
 
 Please feel free to contribute to this textbook, if your contribution makes it to the published version of this book, your name will be included in the contributor list below with a description of your work.
-
-
 
 ## Cite This Work {.unnumbered}
 
