--- a/index.qmd
+++ b/index.qmd
@@ -53,8 +53,8 @@ Please feel free to contribute to this textbook, if your contribution makes it t
 |----------------------------------|------------------|--------------------|
 | Blair T. Johnson| University of Connecticut | Reviewing, editing, & consulting |
 | Edward Kroc | University of British Columbia | Reviewing, editing, & consulting |
-| Christopher Rhoads | University of Connecticut | Reviewing & editing |
-| Elizibeth Schifano | University of Connecticut | Reviewing & editing |
+| Christopher Rhoads | University of Connecticut | Reviewing & editing & consulting  |
+| Elizibeth Schifano | University of Connecticut | Reviewing & editing & consulting |
 | Velu Immonen | Solent University | Designed cover and twitter preview. |
 | Peter Licari | N/A | Reviewing & editing |
 | Shane Tutwiler| University of Rhode Island | Reviewing & Editing |
@@ -63,6 +63,8 @@ Please feel free to contribute to this textbook, if your contribution makes it t
 | Rafael Valdece Sousa Bastos | N/A | Reviewing & editing |
 | Ryan Panela | University of Toronto | Reviewing & editing |
 | Vilgot Huhn| Karolinska Institutet | Reviewing & editing |
+| Jonathan Whitmore| N/A | Reviewing & editing |
+| Rana Mallah | Mckinsey | Reviewing & editing |
 
 ```{=html}
 <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="matthewbjane" data-description="Support me on Buy me a coffee!" data-message="Thank you for being here." data-color="#eeb4d7ff" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
